fix: replace deprecated Long constructor with Long.valueOf()
Co-authored-by: duanluan <14957667+duanluan@users.noreply.github.com>